commit pred prenosem
